--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/all.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
 
     <link rel="preload" href="./fonts/balqis-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -48,13 +47,13 @@
             <div class="fairy__card">
                 <div class="capadocia-slider">
                     <div class="capadocia-slider__item">
-                        <img src="./img/fairy/fairy_img1.jpg">
+                        <img src="./img/fairy/fairy_img1.jpg" width="960" height="700" alt="fairy_img1">
                     </div>
                     <div class="capadocia-slider__item">
-                        <img src="./img/fairy/fairy_img2.png">
+                        <img src="./img/fairy/fairy_img2.png" width="960" height="700" alt="fairy_img2">
                     </div>
                     <div class="capadocia-slider__item">
-                        <img src="./img/fairy/fairy_img3.png">
+                        <img src="./img/fairy/fairy_img3.png" width="960" height="700" alt="fairy_img3">
                     </div>
                 </div>
 
@@ -130,34 +129,62 @@
             </article>
             <div class="capadocia-slider">
                 <div class="capadocia-slider__item">
-                    <img src="./img/our-trip/our-trip-slider-img1.jpg" alt="our-trip-slider-img1" width="960" height="1095">
+                    <img src="./img/our-trip/our-trip-slider-img1.jpg" alt="our-trip-slider-img1" width="960"
+                        height="1095">
                 </div>
                 <div class="capadocia-slider__item">
-                    <img src="./img/our-trip/our-trip-slider-img2.jpg" alt="our-trip-slider-img2" width="960" height="1095">
+                    <img src="./img/our-trip/our-trip-slider-img2.jpg" alt="our-trip-slider-img2" width="960"
+                        height="1095">
                 </div>
                 <div class="capadocia-slider__item">
-                    <img src="./img/our-trip/our-trip-slider-img3.jpg" alt="our-trip-slider-img3" width="960" height="1095">
+                    <img src="./img/our-trip/our-trip-slider-img3.jpg" alt="our-trip-slider-img3" width="960"
+                        height="1095">
                 </div>
             </div>
         </section>
 
         <section class="hotel">
-            <div class="hotel__top">
-                <h2 class="hotel__top-header"></h2>
-                <p class="hotel__top-low-text"></p>
-            </div>
-            <img class="hotel__body-pic" src="" alt="">
-            <article class="hotel__body" >
-                <p class="hotel__body-text"></p>
-                <p class="hotel__body-text"></p>
-                <p class="hotel__body-text"></p>
-                <div class="hotel__body-galery">
-                    <img src="./img/hotel/hotel-galery-pic1.jpg" alt="hotel-galery-pic1" height="150" width="280">
-                    <img src="./img/hotel/hotel-galery-pic2.jpg" alt="hotel-galery-pic2" height="150" width="280">
-                    <img src="./img/hotel/hotel-galery-pic3.jpg" alt="hotel-galery-pic3" height="150" width="280">
-                    <img src="./img/hotel/hotel-galery-pic4.jpg" alt="hotel-galery-pic4" height="150" width="280">
+            <div class="container">
+                <div class="hotel__top">
+                    <h2 class="hotel__top-header">Hotel</h2>
+                    <p class="hotel__top-low-text">Sultan Cave Suites</p>
                 </div>
-            </article>
+                <div class="hotel__middle">
+                    <div class="hotel__body-pic">
+                        <img class="hotel__body-pic-item" src="./img/hotel/hotel-body-pic.jpg" width="500" height="700"
+                        alt="hotel-body-pic">
+                    </div>
+                    <article class="hotel__body">
+                        <p class="hotel__body-text">В этом уникальном отеле, расположенном на вершине холма Айдынлы, вы
+                            можете
+                            забронировать высеченные в скале номера, обставленные антикварной мебелью со всей Турции. С
+                            солнечной террасы отеля открывается прекрасный панорамный вид на Национальный парк Гереме.
+                        </p>
+                        <p class="hotel__body-text">Большинство номеров отеля Sultan Cave Suites высечены в скале, что
+                            обеспечивает прохладу и покой. Все номера оборудованы гостиной зоной и современной ванной
+                            комнатой.
+                            В большинстве из них есть собственная терраса или балкон.
+                        </p>
+                        <p class="hotel__body-text">Отель Cave Suites Sultan располагает изысканным рестораном, где
+                            подают
+                            фирменные блюда региона Каппадокии. После ужина, пройдя на террасу, вы сможете заказать
+                            напиток
+                            и
+                            полюбоваться закатом солнца над деревней.
+                        </p>
+                        <div class="hotel__body-galery">
+                            <img src="./img/hotel/hotel-galery-pic1.jpg" alt="hotel-galery-pic1" height="150"
+                                width="280">
+                            <img src="./img/hotel/hotel-galery-pic2.jpg" alt="hotel-galery-pic2" height="150"
+                                width="280">
+                            <img src="./img/hotel/hotel-galery-pic3.jpg" alt="hotel-galery-pic3" height="150"
+                                width="280">
+                            <img src="./img/hotel/hotel-galery-pic4.jpg" alt="hotel-galery-pic4" height="150"
+                                width="280">
+                        </div>
+                    </article>
+                </div>
+            </div>
         </section>
 
     </main>
