--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="fairy__top">
                     <h2 class="fairy__top-header">Fairy tail</h2>
-                    <p class="fairy__top-text">Сказочная страна чудес</p>
+                    <p class="fairy__top-text">Казкова країна чудес</p>
                 </div>
             </div>
 
@@ -59,28 +59,30 @@
 
                 <div class="fairy__description">
 
-                    <p class="fairy__text">Каппадокия - сказочная страна воздушных шаров, сырных домиков,
-                        разноцветных
-                        долин и волшебных рассветов!
-                        Сюда приезжают, чтобы увидеть природные чудеса, полетать на воздушном шаре и конечно же
-                        сделать
-                        миллион красивых фотографий! </p>
-                    <p class="fairy__text">Участников тура ждёт профессиональная фотосессия от лучших фотографов
-                        Каппадокии!
-                        Ведь именно за волшебными фото на рассвете на фоне воздушных шаров сюда приезжают люди со
-                        всего
-                        мира!
+                    <p class="fairy__text">Каппадокія - казкова країна повітряних куль, сирних будиночків,
+                        різнокольорових
+                        долин та чарівних світанків!
+                        Сюди приїжджають, щоб побачити природні чудеса, політати на повітряній кулі та звичайно ж
+                        зробити
+                        мільйон красивих фотографій! </p>
+                    <p class="fairy__text">Учасників туру чекає професійна фотосесія від найкращих фотографів
+                        Каппадокії!
+                        Адже саме за чарівними фото на світанку на тлі повітряних куль сюди приїжджають люди з
+                        всього
+                        світу!
                     </p>
-                    <p class="fairy__text fairy__text--xl">Также Вы увидите:</p>
-                    <p class="fairy__text">Музей на открытом воздухе в Гёреме
-                        Ущелье Ыхлара и монастырь Селиме
-                        Подземные города
-                        Крепость Учхисар
-                        Зельве и Пашабаг</p>
-                    <p class="fairy__text ">и многие другие достпримечательности.</p>
-                    <p class="fairy__text">Местная кухня — один из поводов посетить Каппадокию, здесь есть рестораны
+                    <p class="fairy__text fairy__text--xl">
+                        Також Ви побачите:</p>
+                    <p class="fairy__text">Музей на відкритому повітрі у Геремі
+                        Ущелина Іхлара та монастир Селіме
+                        Підземні міста
+                        Фортеця Учхісар
+                        Зельве та Пашабаг</p>
+                    <p class="fairy__text ">та багато інших пам'яток.</p>
+                    <p class="fairy__text">
+                        Місцева кухня - один із приводів відвідати Каппадокію, тут є ресторани
                         на
-                        любой бюджет.</p>
+                        будь-який бюджет.</p>
                 </div>
             </div>
         </section>
@@ -93,39 +95,39 @@
                 <div class="our-trip__item">
                     <h2 class="our-trip__item-header">День 1 </h2>
                     <p class="our-trip__item-text">
-                        Прилёт в Анкару<br>
-                        Трансфер в Каппадокию<br>
-                        Солёное озеро<br>
-                        Приезд в Гёреме<br>
-                        Ужин
+                        Приліт в Анкару<br>
+                        Трансфер до Каппадокії<br>
+                        Солоне озеро<br>
+                        Приїзд до Герема<br>
+                        Вечеря
                     </p>
                 </div>
                 <div class="our-trip__item">
                     <h2 class="our-trip__item-header">День 2 </h2>
                     <p class="our-trip__item-text">
-                        Фотосессия<br>
-                        Завтрак в отеле<br>
-                        Дневной тур по Каппадокии<br>
-                        Закат с панорамным видом
+                        Фотосесія<br>
+                        Сніданок у готелі<br>
+                        Денний тур Каппадокією<br>
+                        Захід сонця з панорамним видом
                     </p>
                 </div>
                 <div class="our-trip__item">
                     <h2 class="our-trip__item-header">День 3 </h2>
                     <p class="our-trip__item-text">
-                        Полёт на воздушном шаре<br>
-                        Завтрак в отеле<br>
-                        Экскурсии на выбор
+                        Політ на повітряній кулі<br>
+                        Сніданок у готелі<br>
+                        Екскурсії на вибір
                     </p>
                 </div>
                 <div class="our-trip__item">
                     <h2 class="our-trip__item-header">День 4 </h2>
                     <p class="our-trip__item-text">
-                        Свободное время, шоппинг<br>
-                        Трансфер в Анкару<br>
-                        Вылет в Киев
+                        Вільний час, шопінг<br>
+                        Трансфер до Анкари<br>
+                        Виліт до Києва
                     </p>
                 </div>
-                <a class="our-trip__link" type="button" href="#">забронировать</a>
+                <a class="our-trip__link" type="button" href="#">забронювати</a>
             </article>
             <div class="capadocia-slider">
                 <div class="capadocia-slider__item">
@@ -152,25 +154,25 @@
                 <div class="hotel__middle">
                     <div class="hotel__body-pic">
                         <img class="hotel__body-pic-item" src="./img/hotel/hotel-body-pic.jpg" width="500" height="700"
-                        alt="hotel-body-pic">
+                            alt="hotel-body-pic">
                     </div>
                     <article class="hotel__body">
-                        <p class="hotel__body-text">В этом уникальном отеле, расположенном на вершине холма Айдынлы, вы
+                        <p class="hotel__body-text">У цьому унікальному готелі, розташованому на вершині пагорба Айдинли, ви
                             можете
-                            забронировать высеченные в скале номера, обставленные антикварной мебелью со всей Турции. С
-                            солнечной террасы отеля открывается прекрасный панорамный вид на Национальный парк Гереме.
+                            забронювати висічені у скелі номери, обставлені антикварними меблями з усієї Туреччини. З
+                            сонячної тераси готелю відкривається чудовий панорамний вид на Національний парк Герем.
                         </p>
-                        <p class="hotel__body-text">Большинство номеров отеля Sultan Cave Suites высечены в скале, что
-                            обеспечивает прохладу и покой. Все номера оборудованы гостиной зоной и современной ванной
-                            комнатой.
-                            В большинстве из них есть собственная терраса или балкон.
+                        <p class="hotel__body-text">Більшість номерів готелю Sultan Cave Suites висічені у скелі, що
+                            забезпечує прохолоду та спокій. Всі номери обладнані вітальнею і сучасною ванною
+                            кімнати.
+                            У більшості з них є власна тераса або балкон.
                         </p>
-                        <p class="hotel__body-text">Отель Cave Suites Sultan располагает изысканным рестораном, где
-                            подают
-                            фирменные блюда региона Каппадокии. После ужина, пройдя на террасу, вы сможете заказать
-                            напиток
-                            и
-                            полюбоваться закатом солнца над деревней.
+                        <p class="hotel__body-text">Готель Cave Suites Sultan має вишуканий ресторан.
+                            подають
+                            фірмові страви регіону Каппадокії. Після вечері, пройшовши на терасу, ви зможете замовити
+                            напій
+                            і
+                            помилуватися заходом сонця над селом.
                         </p>
                         <div class="hotel__body-galery">
                             <img src="./img/hotel/hotel-galery-pic1.jpg" alt="hotel-galery-pic1" height="150"
