--- a/app/index.html
+++ b/app/index.html
@@ -39,8 +39,8 @@
         <section class="fairy">
             <div class="container">
                 <div class="fairy__top">
-                    <h2 class="fairy__top-header">Fairy tail</h2>
-                    <p class="fairy__top-text">Казкова країна чудес</p>
+                    <h2 class="top-header fairy__top-header">Fairy tail</h2>
+                    <p class="top-text fairy__top-text">Казкова країна чудес</p>
                 </div>
             </div>
 
@@ -60,37 +60,31 @@
                 <div class="fairy__description">
 
                     <p class="fairy__text">Каппадокія - казкова країна повітряних куль, сирних будиночків,
-                        різнокольорових
-                        долин та чарівних світанків!
+                        різнокольорових долин та чарівних світанків!
                         Сюди приїжджають, щоб побачити природні чудеса, політати на повітряній кулі та звичайно ж
-                        зробити
-                        мільйон красивих фотографій! </p>
+                        зробити мільйон красивих фотографій! </p>
                     <p class="fairy__text">Учасників туру чекає професійна фотосесія від найкращих фотографів
-                        Каппадокії!
-                        Адже саме за чарівними фото на світанку на тлі повітряних куль сюди приїжджають люди з
-                        всього
-                        світу!
+                        Каппадокії! Адже саме за чарівними фото на світанку на тлі повітряних куль сюди приїжджають люди
+                        з
+                        всього світу!
                     </p>
                     <p class="fairy__text fairy__text--xl">
                         Також Ви побачите:</p>
                     <p class="fairy__text">Музей на відкритому повітрі у Геремі
-                        Ущелина Іхлара та монастир Селіме
-                        Підземні міста
-                        Фортеця Учхісар
+                        Ущелина Іхлара та монастир Селіме Підземні міста Фортеця Учхісар
                         Зельве та Пашабаг</p>
                     <p class="fairy__text ">та багато інших пам'яток.</p>
                     <p class="fairy__text">
                         Місцева кухня - один із приводів відвідати Каппадокію, тут є ресторани
-                        на
-                        будь-який бюджет.</p>
+                        на будь-який бюджет.</p>
                 </div>
             </div>
         </section>
         <section class="our-trip">
             <article class="our-trip__body">
                 <div class="our-trip__top">
-                    <h2 class="our-trip__header">Our trip</h2>
-                    <p class="our-trip__header-low-text">Маршрут</p>
+                    <h2 class="top-header">Our trip</h2>
+                    <p class="top-text our-trip__top-text">Маршрут</p>
                 </div>
                 <div class="our-trip__item">
                     <h2 class="our-trip__item-header">День 1 </h2>
@@ -148,8 +142,8 @@
         <section class="hotel">
             <div class="container">
                 <div class="hotel__top">
-                    <h2 class="hotel__top-header">Hotel</h2>
-                    <p class="hotel__top-low-text">Sultan Cave Suites</p>
+                    <h2 class="top-header">Hotel</h2>
+                    <p class="top-text hotel__top-text">Sultan Cave Suites</p>
                 </div>
                 <div class="hotel__middle">
                     <div class="hotel__body-pic">
@@ -157,9 +151,9 @@
                             alt="hotel-body-pic">
                     </div>
                     <article class="hotel__body">
-                        <p class="hotel__body-text">У цьому унікальному готелі, розташованому на вершині пагорба Айдинли, ви
-                            можете
-                            забронювати висічені у скелі номери, обставлені антикварними меблями з усієї Туреччини. З
+                        <p class="hotel__body-text">У цьому унікальному готелі, розташованому на вершині пагорба
+                            Айдинли, ви можете забронювати висічені у скелі номери, обставлені антикварними меблями з
+                            усієї Туреччини. З
                             сонячної тераси готелю відкривається чудовий панорамний вид на Національний парк Герем.
                         </p>
                         <p class="hotel__body-text">Більшість номерів готелю Sultan Cave Suites висічені у скелі, що
@@ -168,27 +162,87 @@
                             У більшості з них є власна тераса або балкон.
                         </p>
                         <p class="hotel__body-text">Готель Cave Suites Sultan має вишуканий ресторан.
-                            подають
-                            фірмові страви регіону Каппадокії. Після вечері, пройшовши на терасу, ви зможете замовити
-                            напій
-                            і
-                            помилуватися заходом сонця над селом.
+                            подають фірмові страви регіону Каппадокії. Після вечері, пройшовши на терасу, ви зможете
+                            замовити
+                            напій і помилуватися заходом сонця над селом.
                         </p>
                         <div class="hotel__body-galery">
-                            <img src="./img/hotel/hotel-galery-pic1.jpg" alt="hotel-galery-pic1" height="150"
-                                width="280">
-                            <img src="./img/hotel/hotel-galery-pic2.jpg" alt="hotel-galery-pic2" height="150"
-                                width="280">
-                            <img src="./img/hotel/hotel-galery-pic3.jpg" alt="hotel-galery-pic3" height="150"
-                                width="280">
-                            <img src="./img/hotel/hotel-galery-pic4.jpg" alt="hotel-galery-pic4" height="150"
-                                width="280">
+                            <img class="img-responsive" src="./img/hotel/hotel-galery-pic1.jpg" alt="hotel-galery-pic1"
+                                height="150" width="280">
+                            <img class="img-responsive" src="./img/hotel/hotel-galery-pic2.jpg" alt="hotel-galery-pic2"
+                                height="150" width="280">
+                            <img class="img-responsive" src="./img/hotel/hotel-galery-pic3.jpg" alt="hotel-galery-pic3"
+                                height="150" width="280">
+                            <img class="img-responsive" src="./img/hotel/hotel-galery-pic4.jpg" alt="hotel-galery-pic4"
+                                height="150" width="280">
                         </div>
+                    </article>
+                    </img>
+                </div>
+        </section>
+        <section class="price">
+            <div class="container">
+                <div class="price__top">
+                    <h2 class="top-header">Price</h2>
+                    <p class="top-text price__top-text">Вартість послуг</p>
+                </div>
+                <div class="price__middle">
+                    <div class="price__middle-body">
+                        <article class="price__body-card">
+                            <h3 class="price__body-card-header">Включено</h3>
+                            <p class="price__body-card-text">Проживання у двомісному номері у готелі зі сніданками</p>
+                            <p class="price__body-card-text">Індивідуальний трансфер для нашої групи з Анкари та назад
+                            </p>
+                            <p class="price__body-card-text">Екскурсія на Солоне озеро</p>
+                            <p class="price__body-card-text">Індивідуальна денна екскурсія найкращими місцями Каппадокії
+                                з особистим транспортом</p>
+                            <p class="price__body-card-text">Фотосесія з професійним фотографом для кожної учасниці
+                                (Декілька локацій, 5 найкращих фото в обробці фотографа та весь матеріал (до 100
+                                фотографій))</p>
+                        </article>
+                        <article class="price__body-card">
+                            <h3 class="price__body-card-header">Не включено</h3>
+                            <p class="price__body-card-text">Авіа Київ-Анкара-Київ (140-170 $)</p>
+                            <p class="price__body-card-text">Обіди та вечері (150 $ на поїздку)</p>
+                            <p class="price__body-card-text">Повітряна куля 200 $</p>
+                            <p class="price__body-card-text">Додаткові екскурсії (за бажанням) від 30$</p>
+                        </article>
+                    </div>
+                    <img class="price__middle-pic-xl" src="./img/price/price-middle-pic-xl.svg" width="206" height="305"
+                        alt="price-middle-pic-xl">
+                    <img class="price__middle-pic-l" src="./img/price/price-middle-pic-xl.svg" width="73" height="108"
+                        alt="price-middle-pic-l">
+                    <img class="price__middle-pic-l price__middle-pic-l--btn" src="./img/price/price-middle-pic-xl.svg"
+                        width="73" height="108" alt="price-middle-pic-l">
+                </div>
+            </div>
+        </section>
+        <section class="application">
+            <div class="container">
+                <h2 class="visually-hidden">application</h2>
+                <div class="application__body">
+                    <article class="application__form">
+                        <div class="application__form-top">
+                            <h3 class="application__form-header">1.07.2020</h3>
+                            <p class="application__form-header-text">Найближча дата туру</p>
+                        </div>
+                        <div class="application__form-top">
+                            <h3 class="application__form-header">490$</h3>
+                            <p class="application__form-header-text application__form-header-text--second">Вартість</p>
+                        </div>
+                        <div class="application__form-btm">
+                            <h3 class="application__form-btm-header">Залишити заявку або поставити запитання</h3>
+                            <input class="application__form-input" type="text" placeholder="Ім'я">
+                            <input class="application__form-input" type="text" placeholder="Телефон">
+                            <button class="application__form-button" type="button">залишити заявку</button>
+                        </div>
+                    </article>
+                    <article class="application__pic">
+                        <img class="img-responsive" src="./img/application/application-pic.jpg" width="600" height="800" alt="application-pic">
                     </article>
                 </div>
             </div>
         </section>
-
     </main>
     <footer class="footer">
         <div class="container">
